# superwhisper-archiver

./: .gitignore  README.md  config.yaml  pyproject.toml
archiver/: __main__.py  git_manager.py  main.py  markdown_formatter.py  models.py  scanner.py  state_tracker.py
docs/plans/: 2026-02-16-superwhisper-archiver-design.md  2026-02-16-superwhisper-archiver-plan.md
tests/: test_markdown_formatter.py  test_models.py  test_scanner.py  test_state_tracker.py
