[project]
name = "superwhisper-archiver"
version = "0.1.0"
description = "Archive superwhisper recordings as markdown to a git repository"
authors = [
    { name = "Anjor Kanekar" },
]
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "gitpython>=3.1",
    "rich>=13.0",
]

[project.scripts]
archiver = "archiver.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["archiver"]

[tool.ruff]
line-length = 100
target-version = "py313"
